syntax ="proto3";

option php_namespace = "Proto\\AnimalScreeningService";
option php_metadata_namespace = "Proto\\Metadata";

package AnimalScreeningServicePackage;

service AnimalScreeningService {
  rpc GetAnimalScreenings (GetAnimalScreeningsRequest) returns (GetAnimalScreeningsResponse);
  rpc CreateAnimalScreening (CreateAnimalScreeningRequest) returns (CreateAnimalScreeningResponse);
  rpc UpdateAnimalScreening (UpdateAnimalScreeningRequest) returns (UpdateAnimalScreeningResponse);
  rpc DeleteAnimalScreening (DeleteAnimalScreeningRequest) returns (DeleteAnimalScreeningResponse);
}
// Requests
message GetAnimalScreeningsRequest {
   int32 animal_id= 1;
}
message CreateAnimalScreeningRequest {
   AnimalScreening animal_screening = 1;
}
message UpdateAnimalScreeningRequest {
   int32 id = 1;
   AnimalScreening animal_screening = 2;
}
message DeleteAnimalScreeningRequest {
    int32 id = 1;
}
// Responses
message GetAnimalScreeningsResponse {
   repeated AnimalScreening animal_screenings = 1;
   int32 response_code = 2;
}
message CreateAnimalScreeningResponse {
   AnimalScreening animal_screening = 1;
   int32 response_code = 2;
}
message UpdateAnimalScreeningResponse {
   AnimalScreening animal_screening = 1;
   int32 response_code = 2;
}
message DeleteAnimalScreeningResponse {
   bool success = 1;
   int32 response_code = 2;
}
// AnimalScreening message
message AnimalScreening {
   optional int32 id = 1;
   int32 animal_id = 2;
   optional string screening_result = 3;
   optional string remarks = 4;
   repeated int32 symptom_id = 5;
   repeated int32 disease_id = 6;
}
